--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
         />
       </div>
       <div class="navbar-nav">
-        <a href="#" class="nav-link">Home</a>
+        <a href="index.html" class="nav-link">Home</a>
         <a href="#" class="nav-link">Tv Shows</a>
         <a href="#" class="nav-link">Movies</a>
         <a href="#" class="nav-link">New & Popular</a>
